--- a/code/style.css
+++ b/code/style.css
@@ -1,38 +1,172 @@
-html {
-  color: #fff;
+body {
+  background: #c6c5b9;
+  color: #393d3f;
+  font-family: 'Athiti', Arial, Helvetica, sans-serif;
+  margin: 0;
 }
 
+/* HEADER */
+
 header {
-  width: 100%;
+  background: #393d3f;
+  color: #c6c5b9;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+}
+
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 24px;
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+  background: #c6c5b9;
+  border-radius: 5px;
+}
+
+.sitename {
+  display: flex;
+  align-items: center;
+}
+
+.sitename div {
+  font-family: 'Indie Flower';
+  font-weight: bold;
+  font-size: 20px;
+  margin-left: 20px;
 }
 
 header img {
-  width: 50px;
+  width: 60px;
 }
 
-main {
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
+nav {
+  display: none;
 }
 
-main .big-news {
+nav a {
+  color: #c6c5b9;
+  text-decoration: none;
+  margin-left: 16px;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+/* BIG NEWS */
+
+.big-news {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  margin: 18px;
+  padding: 18px;
+}
+
+.big-news img {
+  width: 100%;
+  border-radius: 5%;
+}
+
+.big-news div {
+  text-align: center                                                                                                                                                                                                                                                                                                                                     ;
+}
+
+.big-news p {
+  text-align: left                                                                                                                                                                                                                                                                                                                                     ;
+}
+
+/* NEWS */
+
+.news {
+  text-align: center;
+  padding: 24px;
+}
+
+.cards {
+  display: flex;
   flex-wrap: wrap;
 }
 
-main .big-news .card {
+.cards a {
+  /* border: 2px solid #546a7b; */
+  border-radius: 5%;
   width: 100%;
-  height: 100px;
-  margin: auto;
-  background: lightgray;
-  border: 1px solid green;
+  background: #393d3f;
+  text-decoration: none;
+  color: #c6c5b9;
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 20px 20px 0px 20px;
+  margin: 16px 32px;
+}
+
+.cards a img {
+  width: 100%;
+  border-radius: 5%;
+}
+
+.description {
+  display: none;
 }
 
 footer {
-  background: #666666;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  background: #393d3f;
+  color: #c6c5b9;
+  padding: 16px;
+  margin-top: 16px;
+}
+
+/* MEDIA QUERIES */
+
+@media (min-width: 650px) {
+  header {
+    justify-content: space-between;
+  }
+
+  nav {
+    display: inline-block
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .sitename {
+    display: flex;
+    align-items: center;
+  }
+
+  .big-news div {
+      text-align: left;
+      margin: 24px;
+  }
+
+  .cards a {
+    width: 35%;
+    flex-grow: 1;
+  }
+}
+
+@media (min-width: 900px) {
+  .big-news {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .big-news img {
+    width: 50%;
+  };
+
+  .cards a {
+    width: 30%;
+    flex-grow: 1;
+  }
 }
