--- a/code/style.css
+++ b/code/style.css
@@ -3,13 +3,11 @@
 body {
   background-color: whitesmoke;
   margin:0;
-
 }
 
 h1 { 
   margin-top: 0px;
   text-shadow: 2px 2px white;
-
 }
 
 h2 {
@@ -65,7 +63,7 @@ nav {
   /***  Media Quaries   ***/
 
  /* On a tablet the navbar will move from leftside to center, and the links will appear */
-@media screen and (min-width: 668px) and (max-width:1023px){
+@media screen and (min-width: 668px) and (max-width:1024px){
 nav {
     display: flex;
     justify-content: center;
@@ -87,8 +85,8 @@ nav {
 }
 
 
-/* On a desktop  the navbar will be on the left side */
-@media screen and (min-width: 1024px){
+/* On a desktop  the navbar will be on the left side with links showing */
+@media screen and (min-width: 1023px){
   nav { display: flex;
         justify-content: left;
         background-color: #F8ECEC;
@@ -97,16 +95,14 @@ nav {
 
   .linkleft {
         display: inline-block;
-       
       }  
-      .linkright {
+  .linkright {
         display: inline-block;
-        
       }
 }
 
-/*Here starts the code for the Header */
-/*when on a mobile the header will still be in the center  */
+/* HEADER */
+
  
 header {
   display: flex;
@@ -122,22 +118,21 @@ header {
 
   /***  Media Quaries   ***/
 
-  /* When on a tablet the header size increases  */
+  /*  on a tablet the header size increases  */
 @media screen and (min-width:664px) and (max-width: 1024px){
     header {
       width: 1350px;
     }
 } 
-
+/*  on a laptop the header size increases again  */
 @media screen and (min-width:1024px) and (max-width: 2040px){
   header {
     width:1450px;
-
   }
 } 
 
 
-/*Daily quote code  */
+/* DAILY QUOTE CODE */
 
 
 .quote-container {
@@ -151,8 +146,6 @@ header {
 
 .quote {
   color: pink;
- 
-
 }
 
 .todaysquote {
@@ -164,24 +157,22 @@ header {
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: xx-large;
-
 }
 
 
   /***  Media Quaries   ***/
 
+/* on a tablet the width increases  */
 @media screen and (min-width: 664px) and (max-width:1024px){
   .quote-container {
   width: 1350px;
-  
   }
-
 } 
 
+/* on a laptop the width increases  */
 @media screen and (min-width: 1025px) {
   .quote-container {
   width: 1450px;
-  
   }
 } 
 
@@ -202,7 +193,6 @@ header {
 .large-news-container {
   display: flex;
   flex-direction: column;
-  
   padding-top: 100px;
   padding-bottom: 150px;
   padding-left: 25px;
@@ -227,7 +217,7 @@ header {
 
   /***  Media Quaries   ***/
 
-/* When on a tablet the screen will show the content in a column */
+/* on a tablet the screen will show the content in a column */
 @media screen and (min-width:664px) and (max-width: 1024px) {
   .large-news-container {
     flex-direction: row;
@@ -239,7 +229,7 @@ header {
     
   }
 }
-/* When on a Laptop the screen will show the content in a row */
+/* on a Laptop the screen will show the content in a row */
 @media screen and (min-width: 1024px) {
   .large-news-container {
     flex-direction: row;
@@ -280,9 +270,7 @@ margin-top: 50px;
   transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-
-
-
+/* Animation  */
 .small-news::after {
   content: "";
   border-radius: 5px;
@@ -297,34 +285,26 @@ margin-top: 50px;
   transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-
-
-
 .small-news:hover {
   -webkit-transform: scale(1.15, 1.15);
   transform: scale(1.15, 1.15);
   background-color: lightpink;
 }
 
-
 .small-news:hover::after {
   opacity: 1;
 }
 
+/* images inside small news  */
 .small .small-img {
   justify-content: center;
   width: 300px;
-
-
-
 }
 
 
-
-
-  
     /***  Media Quaries   ***/
-  /* When on a tablet the content will be shown in  two rows in the center */
+
+/*on a tablet the content will be shown in  two rows in the center */
 @media screen and (min-width:664px) and (max-width: 1024px) {
   .small {
     width:1024px;
@@ -341,7 +321,7 @@ margin-top: 50px;
 }
     
 
-/* When on a Laptop the content will be shown in four rows in the center */
+/*on a Laptop the content will be shown in four rows in the center */
 
 @media screen and (min-width:1024px)  {
   .small {
@@ -349,8 +329,7 @@ margin-top: 50px;
     flex-direction: row;
     justify-content: space-between;
     margin: 8px;
-    margin-top: 30px;
-        
+    margin-top: 30px;    
   }
 
   .small-news {
@@ -359,19 +338,12 @@ margin-top: 50px;
     margin: 20px;
     margin-left: 25px;
   }  
+
   .small .small-img {
     width: 200px;
-  
   }
-
 }
    
-
-
-
-
-
-
  /*  BOTTOM IMAGES  */
 
 
@@ -393,7 +365,7 @@ margin-top: 50px;
 
   /***  Media Quaries   ***/
 
-
+/* on a tablet the width increases, pictures shows in a row */
 @media screen and (min-width: 667px) and (max-width:1024px) {
   .images-container {
     width: 1200px;
@@ -403,7 +375,7 @@ margin-top: 50px;
     padding-right: 30px; 
   }
 }
-
+/* on a Laptop the width increases, pictures shows in a row */
 @media screen and (min-width:1024px) {
   .images-container{
   width:1400px;
@@ -412,10 +384,6 @@ margin-top: 50px;
  
   }
 }  
-
-
-
-
 
 /* BUTTON, */
 
@@ -440,8 +408,8 @@ button   {
 
 button:hover {
   background-color:lightpink;
-
 }
+/* Animation */
 
 button:active {
   background-color: lightpink;;
@@ -450,29 +418,23 @@ button:active {
 }
 
 
+  /***  Media Quaries   ***/
+
+/*on a tablet width increases*/
 @media screen and (min-width: 667px) and (max-width:1024px) {
   .button{
     width: 1350px; 
-  }
-  
+  } 
 }
 
+/*on a laptop width increases*/
 @media screen and (min-width: 1024px) {
   .button{
     width: 1450px;
   }
 }
 
-
-
-
-
-
-
-
-
 /* FOOTER */
-
 
 .footer {
   display: flex;
@@ -487,12 +449,14 @@ button:active {
 
   /***  Media Quaries   ***/
 
+/*on a tablet width increases*/
 @media screen and (min-width: 667px) and (max-width:1024px) {
     .footer{
       width: 1350px;
     }
   }
 
+/*on a laptop width increases*/  
   @media screen and (min-width: 1024px) {
     .footer{
       width: 1450px;
