--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,180 @@
-html {
-  background: #0025ff;
+body {
+  background-color: rgb(38, 77, 148);
   color: #fff;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+}
+
+/***HEADER STYLING ***/
+
+header {
+  background-color: rgb(128, 38, 83);
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 16px;
+}
+
+nav {
+display: none;
+ 
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+  margin-left: 16px;
+  font-size: 20px;
+}
+
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 24px;
+  
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+  background: #fff;
+  border-radius: 5px;
+}
+
+header img {
+width: 50px;
+height: 50px;
+}
+
+header p {
+  font-size: 30px;
+}
+
+/***BIG NEWS CONTENT***/
+.big-news img {
+  width: 100%;
+}
+
+.big-news {
+  display: flex;
+  flex-direction: column;
+  align-items: center;  
+}
+
+.big-news div {
+  text-align: center;
+  }
+ 
+
+/***NEWS CONTENT***/
+.news-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+}
+
+.news-container img {
+   width: 400px;
+   height: 400px;
+   object-fit: cover;
+}
+
+.flex-child {
+  width: 400px;
+  height: max-content;
+  margin: 30px;
+  margin-bottom: 40px;
+  padding: 10px;
+  box-shadow: 0 10px 10px 0 rgba(0,0,0,0.2);
+  background: white;
+  color: rgb(38, 77, 148);
+  cursor: pointer;
+}
+
+/***FOOTER***/
+
+
+footer {
+  background-color: rgb(128, 38, 83);
+  padding: 20px;
+  text-align: center;
+}
+
+button {
+ text-align: center;
+  background-color: white;
+  font-size: larger;
+  margin-bottom: 40px;
+  border: none;
+  display: inline-block;
+  border-radius: 10px;
+  padding: 10px;
+  color: rgb(38, 77, 148); 
+  box-shadow: 0 10px 10px 0 rgba(0,0,0,0.2);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/***ANIMATION FOR BUTTON***/
+
+@keyframes example {
+  0%   {background-color: rgb(128, 38, 83)}
+  25%  {background-color: rgb(125, 188, 224);}
+  50%  {background-color: rgb(218, 126, 182);}
+  100% {background-color: rgb(117, 228, 117);}
+}
+
+button {
+  animation-name: example;
+  animation-duration: 8s;
+}
+
+
+
+/***MEDIA QUERIES ***/
+
+@media (min-width: 667px) {
+  header {
+    justify-content: space-between;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  nav {
+    display: inline-block
+  }
+
+  .big-news {
+   flex-direction: row;
+  }
+
+  .big-news div {
+    font-size: 20px;
+    }
+
+  .news-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    Width: 120%;
+    margin: 0;
+    align-items: center;
+  }
+
+  .flex-child:hover {
+    background-color: rgb(153, 149, 152);
+    transform: scale(0.9, 0.9);
+    box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
+        -5px -5px 30px 15px rgba(0,0,0,0.22);
+    }
+
+  button:hover {
+    background: rgb(153, 149, 152);
+    }
 }
