--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,215 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background-image: url(./images/background.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: rgb(0, 0, 0);
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+h1 {
+  color: rgb(0, 0, 0);
+  font-size: 28px;
+  padding: 10px;
+  padding-right: 5px;
+  text-shadow: 2px 2px 5px rgb(163, 163, 163);
+}
+
+h2 {
+  font-size: 20px;
+  padding: 0;
+  padding-bottom: 1px;
+  margin: 8px;
+  margin-bottom: -8px;
+}
+
+h3 {
+  font-size: 18px;
+  padding: 4px; margin: 0;
+  padding-top: 10px;
+}
+
+p {
+  font-size: 16px;
+  padding: 8px;  
+}
+
+header { 
+  background-color: rgba(255, 255, 255, 0.747);
+  height: 120px;
+  width: 380px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.hamburger {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 20px;
+  height: 20px;
+}
+
+.hamburger div {
+  width: 20px;
+  height: 3px;
+  background-color: rgb(65, 211, 155);
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+nav {
+  color: #000;
+  font-size: 16px;
+  text-decoration: none;
+  display: none;
+}
+
+nav a {
+  color:rgb(65, 211, 155);
+  text-decoration: none;
+}
+
+.main {
+  background-color:rgba(255, 255, 255, 0.747);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  height: 450px;
+  width: 380px;
+  margin-bottom: 30px;
+}
+
+.main a:link {
+  color: #000;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.main a:hover {
+  color: rgb(65, 211, 155);
+}
+
+.main a.visited {
+  color: grey;
+}
+
+#mainphoto {  
+  width: 92%;
+  height: auto;
+  margin: 10px;
+  padding: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+img {
+  width: 300px;
+  max-width: 100%;
+  height: 400px;
+  display: block; 
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+}
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 5px;
+ }
+
+ .card {
+  background-color: rgba(255, 255, 255, 0.747);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  padding-top: 15px;
+  margin: 20px;
+  margin-bottom: 2px;
+  width: 350px;
+  height: 450px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.card a:link {
+  color: #000;
+  font-size: 15px;
+  text-decoration: none;
+}
+
+.card a:hover {
+  color: rgb(65, 211, 155);
+}
+
+.card a:visited {
+  color: grey;
+}
+
+footer {
+  color: #000;
+  text-align: center;
+  height: 30px;
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+
+  header {
+    width: 100%;  
+    height: 200px;
+}
+
+  h1 {
+    font-size:48px;
+}
+
+  h2 {
+    font-size: 30px;
+}
+
+  h3 {
+    font-size: 28px;
+}
+
+  p {
+    font-size: 20px;
+}
+
+  .main {
+    width: 100%;
+    height: 100%;
+}
+
+  img {
+    align-items: center;
+}
+  
+  .hamburger {
+    display: none;
+}
+  
+  nav a {
+   display: block;
+  }
+
+  .main a:link {
+    font-size: 19px;
+}
+  
+  #mainphoto {  
+    width: 97%;
+}
+  
+   .card {
+    height: 500px;
+}
+  
+  .card a:link {
+    font-size: 18px;
+  }
+  
+  footer {
+    height: 45px;
+  }
 }
