--- a/code/style.css
+++ b/code/style.css
@@ -123,6 +123,10 @@ article p {
   font-weight: bold;
 }
 
+article a{
+  text-decoration: none;
+}
+
 .background-mask {
   background-color: rgba(255, 255, 255, 0.671);
   height: 100%;
