--- a/code/style.css
+++ b/code/style.css
@@ -167,6 +167,7 @@ footer {
   display:flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   padding: 0px;
   background-color:#f6f4e6;
   width: 100%;
@@ -174,9 +175,15 @@ footer {
 }
 
 footer p {
+  width:100%;
+  text-align: center;
   font-family:"didot";
   font-size: 14px;
   color: rgb(29, 29, 29);
+}
+footer img {
+  width: 50px;
+  margin-bottom: 25px;
 }
 
 /**** TABLET ****/
