--- a/code/style.css
+++ b/code/style.css
@@ -1,12 +1,11 @@
 /* General styling */
-html {
-  background: whitesmoke;
-  color: black;
+body {
+  background: black;
+  color: whitesmoke;
+  font-family: 'Courier New', Courier, monospace;
+  
 }
 
-h1 {
-  font-family: 'Times New Roman', Times, serif;
-}
 
 /* Header */
 header img {
@@ -14,15 +13,39 @@ header img {
   width: 50px;
 }
 header {
-  background: white;
-  padding: 20px;
-  border: 10px solid gray;
+  background:black;
+  padding: 5px;
+  border: 0;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.hamburger {
+  display: flex;
+  height: 25px;
+  width: 25px;
+  flex-direction: column;
   justify-content: space-between;
 
 }
 
+.hamburger div {
+  height: 4px;
+  width: 25px;
+  background: whitesmoke;
+
+}
+
 nav {
+   display: none; 
+}
+
+nav a {
+  text-decoration: none;
+  color: whitesmoke;
+  margin-left: 10px;
 
 }
 
@@ -31,9 +54,117 @@ nav {
 
 /* Big news */
 
+.big-news-container {
+  padding: 100px 20px;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.big-news-container img {
+  width: 100%;
+}
 
 
-/* General news  */
+/* Card grid  */
+.card-container {
+  display: flex;
+  justify-content: center;
 
+  }
+
+   .card-container img {
+  width: 90%; 
+  height: 90%;
+  }
+
+  .cards {
+    max-width: 100%;
+    margin: 0px;
+    display: grid;
+    grid-row-gap: 1rem;
+    
+  }
+  .card {
+    display: flex;
+    align-items: column;
+    flex-wrap: wrap;
+    background-color: whitesmoke;
+    color: gray;
+    padding: 2rem;
+    margin: 2rem;
+    margin-right: 1rem;
+    height: 15rem;
+    width: 15rem;
+   
+
+  }
+  
 
 /* Footer  */
+
+.footer {
+  background: black;
+  padding: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.button {
+  color: whitesmoke;
+  background-color: black;
+  text-decoration: none;
+  padding: 10px;
+  border: 1px solid whitesmoke;
+}
+
+.button:hover {
+color: black;
+
+}
+
+
+/*** Media queries ***/
+@media (min-width: 650px) {
+  nav {
+    display: inline-block;
+  }
+  .hamburger {
+    display: none;
+  }
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+}
+
+@media (min-width: 900px) {
+  .big-news-container {
+   flex-direction: row;
+   align-items: center;
+  }
+
+  .big-news-container img {
+    width: 60%;
+    margin: 20px
+  }
+  .cards {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+}
+
+/*** Hover effects ***/
+
+@keyframes scale {
+  50% {
+    transform: scale(1.1);
+  } 100% {
+    transform: scale(1);
+  }
+}
+.card:hover {
+  animation-name: scale;
+  animation-duration: 0.5s;
+}
