--- a/code/style.css
+++ b/code/style.css
@@ -1,5 +1,5 @@
 * {
-  box-sizing: border-box;
+  box-sizing: border-box; /* Doing like this, is it valid for the whole page and elements? */
 }
 
 body {
@@ -58,7 +58,22 @@ nav a:hover {
 .big-news-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin: 40px;
+}
+
+.big-news-card {
+  margin: 10px 40px;
+  width: 80%;
+}
+
+.big-news-card img {
+  width: 100%; /* From where do I get the height? */
+  border-radius: 30px;
+}
+
+.big-news-card h2 {
+  text-align: center;
 }
 
 /**** OTHER NEWS ****/
@@ -78,23 +93,22 @@ nav a:hover {
   margin: 10px 40px;
   border-radius: 30px;
   box-shadow: 5px 5px #868686;
-  width: 60%;
+  width: 80%;
   height: auto;
 }
 
 .other-news-card img {
-  width: 100%;
-  height: 200px;
+  width: 100%; /* From where do I get the height? */
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
 }
 
 /*** FOOTER ***/
 footer {
-  height: 100px;
   background-color: #056676;
   color: #e8ded2;
   text-align: center;
+  padding: 20px 10px;
 }
 
 footer a {
@@ -120,9 +134,18 @@ footer a {
     text-decoration: none;
   }
 
+  .big-news-container {
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .big-news-card {
+    width: 40%;
+  }
+
   .other-news-container {
     flex-direction: row;
-    /*background-color: rgb(126, 161, 73);*/
     flex-wrap: wrap;
     justify-content: space-evenly;
   }
@@ -147,6 +170,14 @@ footer a {
 
   nav .logo {
     display: none;
+  }
+
+  .big-news-card {
+    width: 30%;
+  }
+
+  .big-news-card-grow {
+    flex-grow: 2;
   }
 
   .other-news-container {
