--- a/code/style.css
+++ b/code/style.css
@@ -24,6 +24,9 @@ html{
       align-self: center;
       width: 40%;
   }
+  .logo{
+    display: none;
+  }
   h1 {
     display: none;
   }
@@ -103,6 +106,7 @@ html{
   }
 
   @media (min-width: 668px){
+    
     .card-container{
         justify-content: center;
         flex-direction: row;
@@ -142,6 +146,13 @@ html{
       display: flex;
       align-items: center;
       margin: 50px 0;
+    }
+    header img{
+      display: none;
+    }
+    .logo{
+      display: block;
+      align-self: flex-start;
     }
     .card-container{
       max-width: 1080px;
